--- a/helm/producer-rss/values.yaml
+++ b/helm/producer-rss/values.yaml
@@ -81,9 +81,28 @@ tolerations: []
 affinity: {}
 
 api:
-  resolver:
+  writer:
     backoff: "10s"
-    uri: "resolver:8080"
+    uri: "writer:50051"
+db:
+  protocol: mongodb
+  hostname: core-mongodb
+  port: 27017
+  # Database name to use.
+  name: producer-rss
+  username: "root"
+  password:
+    raw: "" # used if permits.db.password.secret.enabled is false
+    secret:
+      enabled: true
+      name: "core-mongodb"
+      key: "mongodb-root-password"
+  table:
+    # Database table name to use.
+    name: feeds
+  tls:
+    enabled: false
+    insecure: false
 feed:
   tls:
     skipVerify: true
@@ -91,8 +110,26 @@ feed:
     min: "10s"
     max: "10m"
   updateTimeout: "1m"
-  urlsPath: "feed-urls.txt"
   userAgent: "awakari-producer-rss/0.0.1"
+  list:
+    - name: "arxiv-org-cs"
+      url: "http://export.arxiv.org/rss/cs"
+      schedule: "* * * * *"
+    - name: "arxiv-org-astro-ph"
+      url: "http://export.arxiv.org/rss/astro-ph"
+      schedule: "* * * * *"
+    - name: "lenta-ru"
+      url: "https://lenta.ru/rss/news"
+      schedule: "* * * * *"
+    - name: "yle-fi"
+      url: "https://feeds.yle.fi/uutiset/v1/majorHeadlines/YLE_UUTISET.rss"
+      schedule: "* * * * *"
+    - name: "techcrunch-com"
+      url: "https://techcrunch.com/feed/"
+      schedule: "* * * * *"
+    - name: "hn-org"
+      url: "https://hnrss.org/newest"
+      schedule: "* * * * *"
 log:
   # https://pkg.go.dev/golang.org/x/exp/slog#Level
   level: -4
