--- a/helm/producer-rss/templates/serviceaccount.yaml
+++ b/helm/producer-rss/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "producer-rss.serviceAccountName" . }}
+  name: {{ include "producerRss.serviceAccountName" . }}
   labels:
-    {{- include "producer-rss.labels" . | nindent 4 }}
+    {{- include "producerRss.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
