--- a/helm/producer-rss/templates/tests/test-connection.yaml
+++ b/helm/producer-rss/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "producer-rss.fullname" . }}-test-connection"
+  name: "{{ include "producerRss.fullname" . }}-test-connection"
   labels:
-    {{- include "producer-rss.labels" . | nindent 4 }}
+    {{- include "producerRss.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "producer-rss.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "producerRss.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
