--- a/helm/producer-rss/templates/cronjob-arxiv-org-cs.yaml
+++ b/helm/producer-rss/templates/cronjob-arxiv-org-cs.yaml
@@ -5,7 +5,7 @@ metadata:
     app: "producer-rss"
   name: "{{ include "producerRss.fullname" . }}-arxiv-org-cs"
 spec:
-  schedule: "* * * * *"
+  schedule: "0 0 * * *"
   jobTemplate:
     spec:
       template:
