--- a/helm/producer-rss/values.yaml
+++ b/helm/producer-rss/values.yaml
@@ -55,17 +55,10 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  requests:
+    cpu: 10m
+    memory: 32Mi
 
 autoscaling:
   enabled: false
@@ -92,7 +85,7 @@ db:
   name: producer-rss
   username: "root"
   password:
-    raw: "" # used if permits.db.password.secret.enabled is false
+    raw: "" # used if db.password.secret.enabled is false
     secret:
       enabled: true
       name: "core-mongodb"
@@ -111,25 +104,6 @@ feed:
     max: "10m"
   updateTimeout: "1m"
   userAgent: "awakari-producer-rss/0.0.1"
-  list:
-    - name: "arxiv-org-cs"
-      url: "http://export.arxiv.org/rss/cs"
-      schedule: "* * * * *"
-    - name: "arxiv-org-astro-ph"
-      url: "http://export.arxiv.org/rss/astro-ph"
-      schedule: "* * * * *"
-    - name: "lenta-ru"
-      url: "https://lenta.ru/rss/news"
-      schedule: "* * * * *"
-    - name: "yle-fi"
-      url: "https://feeds.yle.fi/uutiset/v1/majorHeadlines/YLE_UUTISET.rss"
-      schedule: "* * * * *"
-    - name: "techcrunch-com"
-      url: "https://techcrunch.com/feed/"
-      schedule: "* * * * *"
-    - name: "hn-org"
-      url: "https://hnrss.org/newest"
-      schedule: "* * * * *"
 log:
   # https://pkg.go.dev/golang.org/x/exp/slog#Level
   level: -4
