--- a/helm/producer-rss/templates/cronjob-hn-org.yaml
+++ b/helm/producer-rss/templates/cronjob-hn-org.yaml
@@ -13,6 +13,7 @@ spec:
           containers:
             - name: "{{ include "producerRss.fullname" . }}-hn-org"
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+              imagePullPolicy: "{{ .Values.image.pullPolicy }}"
               env:
                 - name: API_WRITER_BACKOFF
                   value: "{{ .Values.api.writer.backoff }}"
