gke demo cluster deployment on push to master

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
 
-  staging:
+  deploy:
     runs-on: ubuntu-latest
     steps:
 
@@ -28,26 +28,38 @@ jobs:
       - name: Staging
         run: make staging
 
-  helm:
-    runs-on: ubuntu-latest
-    steps:
-
-      - uses: actions/checkout@v2
-
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.7.0
+          version: v3.12.0
 
-      - name: Build Helm Chart
+      - name: Helm Lint
         run: |
-          mkdir helm/package
-          helm package helm/${COMPONENT}/ --version ${CHART_VERSION} --destination helm/package
-          cd helm/package
-          helm repo index .
+          helm lint helm/${COMPONENT}
 
-      - name: Publish Helm Chart
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Helm Package
+        run: |
+          helm dependency update helm/${COMPONENT}
+          helm package helm/${COMPONENT}
+
+      - name: Google Cloud Auth
+        uses: 'google-github-actions/auth@v1'
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: helm/package/
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+
+      - uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GKE_RPOJECT_ID }}
+
+      - name: Kubeconfig
+        run: |
+          gcloud components install gke-gcloud-auth-plugin
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME_DEMO }} \
+            --region ${{ secrets.GKE_CLUSTER_REGION }} \
+            --project ${{ secrets.GKE_PROJECT_ID }}
+
+      - name: Helm Upgrade
+        run: |
+          helm upgrade --install ${COMPONENT} ${COMPONENT}-0.0.0.tgz \
+            --set db.username=root \
+            --set db.password.secret.enabled=true
