--- a/helm/producer-rss/values.yaml
+++ b/helm/producer-rss/values.yaml
@@ -6,10 +6,10 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/awakari/producer-rss
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "latest"
-
-imagePullSecrets: []
+imagePullSecrets:
+  - name: github-registry
 nameOverride: ""
 fullnameOverride: ""
 
