gke demo cluster deployment on push to master

--- a/helm/producer-rss/values.yaml
+++ b/helm/producer-rss/values.yaml
@@ -59,6 +59,9 @@ resources:
   requests:
     cpu: 1m
     memory: 16Mi
+  limits:
+    cpu: 1000m
+    memory: 256Mi
 
 autoscaling:
   enabled: false
