--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -40,7 +40,16 @@ jobs:
       - name: Helm Package
         run: |
           helm dependency update helm/${COMPONENT}
-          helm package helm/${COMPONENT}
+          mkdir helm/package
+          helm package helm/${COMPONENT} --destination helm/package
+          cd helm/package
+          helm repo index .
+
+      - name: Publish Helm Chart
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: helm/package/
 
       - name: Google Cloud Auth
         uses: 'google-github-actions/auth@v1'
@@ -60,5 +69,5 @@ jobs:
 
       - name: Helm Upgrade
         run: |
-          helm upgrade --install ${COMPONENT} ${COMPONENT}-0.0.0.tgz \
+          helm upgrade --install ${COMPONENT} helm/package/${COMPONENT}-0.0.0.tgz \
             --set podAnnotations.commit=$(git rev-parse --short HEAD),db.password.secret.enabled=false,db.protocol=mongodb+srv,db.tls.enabled=true,db.tls.insecure=true,db.hostname=${{ secrets.DB_HOST_DEMO }},db.username=${{ secrets.DB_USERNAME_DEMO }},db.password.raw=${{ secrets.DB_PASSWORD_DEMO }}
