--- a/helm/producer-rss/templates/cronjob-rt-com.yaml
+++ b/helm/producer-rss/templates/cronjob-rt-com.yaml
@@ -48,7 +48,7 @@ spec:
                 - name: LOG_LEVEL
                   value: "{{ .Values.log.level }}"
                 - name: FEED_URL
-                  value: "rt.com/rss/news/"
+                  value: "https://www.rt.com/rss/news/"
                 - name: FEED_TLS_SKIP_VERIFY
                   value: "{{ .Values.feed.tls.skipVerify }}"
                 - name: FEED_UPDATE_INTERVAL_MIN
