--- a/helm/producer-rss/templates/cronjob-habr-com-ru.yaml
+++ b/helm/producer-rss/templates/cronjob-habr-com-ru.yaml
@@ -3,9 +3,9 @@ kind: CronJob
 metadata:
   labels:
     app: "producer-rss"
-  name: "{{ include "producerRss.fullname" . }}-nature-com-chem"
+  name: "{{ include "producerRss.fullname" . }}-habr-com-ru"
 spec:
-  schedule: "0 2 * * *"
+  schedule: "0/13 0 * * *"
   jobTemplate:
     spec:
       template:
@@ -15,7 +15,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           containers:
-            - name: "{{ include "producerRss.fullname" . }}-nature-com-chem"
+            - name: "{{ include "producerRss.fullname" . }}-habr-com-ru"
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
               imagePullPolicy: "{{ .Values.image.pullPolicy }}"
               env:
@@ -48,7 +48,7 @@ spec:
                 - name: LOG_LEVEL
                   value: "{{ .Values.log.level }}"
                 - name: FEED_URL
-                  value: "https://www.nature.com/nchem.rss"
+                  value: "https://habr.com/ru/rss/articles/"
                 - name: FEED_TLS_SKIP_VERIFY
                   value: "{{ .Values.feed.tls.skipVerify }}"
                 - name: FEED_UPDATE_INTERVAL_MIN
