--- a/helm/producer-rss/templates/cronjob-habr-com-ru.yaml
+++ b/helm/producer-rss/templates/cronjob-habr-com-ru.yaml
@@ -5,7 +5,7 @@ metadata:
     app: "producer-rss"
   name: "{{ include "producerRss.fullname" . }}-habr-com-ru"
 spec:
-  schedule: "7/13 0 * * *"
+  schedule: "7/13 * * * *"
   jobTemplate:
     spec:
       template:
